<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <!--        app:backgroundTint="#DFE0E1"--><![CDATA[
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.523" />



    ]]>

    <Button
        android:id="@+id/glogin"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:drawableLeft="@drawable/ic_icons8_google"
        android:text="@string/sign_in_with_google"
        android:textAlignment="center"
        android:textColor="#414855"
        app:backgroundTint="#CFCFCF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.264" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8620232E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:shadowColor="#192C9C"
        android:textColor="#020202"
        android:textColorHighlight="#D81B60"
        android:textColorLink="#FDD835"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#1F5AD4"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:text="@string/sign_in"
        app:backgroundTint="#1F5AD4"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="54dp"
        android:layout_height="38dp"
        android:gravity="center"


        android:text="@string/or"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/glogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registering"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glogin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registering"
        android:layout_width="66dp"
        android:layout_height="19dp"
        android:layout_marginStart="72dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#1F5AD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/glogin"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="241dp"
        android:layout_height="96dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965">

        <TextView
            android:id="@+id/textView"
            android:layout_width="212dp"
            android:layout_height="87dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/sign2_in"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/show_password"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.409"
        app:useMaterialThemeColors="false" />

</androidx.constraintlayout.widget.ConstraintLayout>