<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity2">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up2"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.273" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94160587" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.023255814" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7660739" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_face_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:text="@string/register"
        app:backgroundTint="#1F5AD4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/login5"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:paddingStart="5dp"
        android:text="@string/log_in"
        android:textColor="#1F5AD4"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/existing_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="Show Password"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="98dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.224"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/Browse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Browse"
        app:backgroundTint="#1F5AD4"
        app:layout_constraintBottom_toBottomOf="@+id/imageView41"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/imageView41"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.671" />

</androidx.constraintlayout.widget.ConstraintLayout>
